# lol_id_tools

./: pyproject.toml
lol_id_tools/parsing/: data_parser.py  parse_ddragon.py
