[tool.poetry]
name = "lol_id_tools"
version = "2.0.2"
description = ""
authors = ["mrtolkien <gary.mialaret@gmail.com>"]
license = "MIT"
include = ["*.json"]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.0"
rapidfuzz = "^3.14.0"
pydantic = "^2.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
